ft(user-login-endpoint): Implement login functionality
- Write unit test for login
- Write documentation for login
- Create login validator
- Create user login method
- Create login route handler
- Modify travis
- Install bcrypt

[Start #167891576]
